syntax = "proto3";

option csharp_namespace = "Fibo.Definition";

// Service for returning static data
service Fibo {
  // Returns the fibonacci numeral by a given index
  rpc GetFiboNumberByIndex(FiboNumberByIndexRequest) returns (FiboNumberByIndexReply) {}

  rpc GetVisitedValues(EmptyRequest) returns (VisitedValuesReply) {}

  rpc SaveFiboNumberRedis(VisitedValue) returns (SaveFiboNumberReply) {}

  rpc SaveFiboIndexPostgres(SaveFiboIndexPostgresRequest) returns (SaveFiboNumberReply) {}

}

message FiboNumberByIndexRequest {
	int32 index = 1;
}

message FiboNumberByIndexReply {
	int32 fiboNumber = 1;
}

message SaveFiboIndexPostgresRequest {
	int32 fiboIndex = 1;
}

message VisitedValue {
	int32 index = 1;
	int32 value = 2;
}

message EmptyRequest {}

message SaveFiboNumberReply {
	bool success = 1;
}

message VisitedValuesReply {
	repeated int32 indexes = 1;
	repeated VisitedValue visitedValues = 2;
}

